Direct3D 11
	* Added the UnorderedAccess member to BindFlags.
	* Added the ability to create structured buffer resources.